
Mon Mar 18 14:43:31 2002 <douxchamps@ieee.org> 
	* dc1394_control.c: fixed bug in dc1394_set_feature_on_off: it
	would only set 'on' if the feature was 'off', no matter what
	was the argument.
	* dc1394_control.c: fixed quadlet-per-packet for format_0, mode_4,
	15fps (was 280, should have been 480)

Mon March 26 0:41:50 2002 <dan@dennedy.org>
    * Applied David Moore's <david@startbox.com> patch to avoid getting
      old captures with dma_multi_capture.
    * Applied John Stanley's <stanley@peak.org> patch to use multiple
      cameras on mutliple ports (hosts).
      NOTE: the new dc1394_destroy_handle() in dc1394_control.h
      NOTE: the dma device file defaults to the video1394 devfs default
      naming convention when not specified: /dev/video1394/<port>

Fri May 10 16:12:00 2002 <dan@dennedy.org>
    * dc1394_capture.c, dc1394_control.h:
      bugfixes in dc1394_cameracapture, dc1394_dma_multi_capture(),
      and _dc1394_dma_basic_setup() to better support grabbing all
      frames.
    * dc1394_capture.c: dc1394_dma_setup_capture() modified to take
      dma_device_file as a param to force users to set it.
      
Sun July 21 22:51:00 2002 <dan@dennedy.org>
    * added examples/dc1394_multiview.c to test/demonstrate multicapture
      over multiple ports.
	  
Fri July 28 00:26:00 2002 <dan@dennedy.org>
    * dc1394_capture.c: added drop_frames boolean to
      dc1394_dma_setup_capture().
    * bumped versions to 0.9 since interface has changed some.
      Correct libtool versions:
	    major=9, interface changed
		revision=0, first implementation of this interface
	    age=0 for no backwards compatibilty
    * examples/dc1394_multicapture: added drop_frames support, cleanup.

Wed Aug  7 17:08:31 2002 <ddouxchamps@users.sf.net>
    * added several format7 functions for IIDC 1.30 compatibility.
    * first quick hack of IIDC 1.30 handshaking for byte-per-packet
      setting in format7. This happens in _dc1394_basic_format7_setup.