@@ -230,3 +230,7 @@ Wed Aug  7 17:08:31 2002 <ddouxchamps@users.sf.net>
     * added several format7 functions for IIDC 1.30 compatibility.
     * first quick hack of IIDC 1.30 handshaking for byte-per-packet
       setting in format7. This happens in _dc1394_basic_format7_setup.
+
+Tue Aug 20 10:40:12 2002 <ddouxchamps@users.sf.net>
+    * added support for Point Grey cameras, which support IIDC with
+      a little tweak (modifications in dc1394_is_camera).
